<resources>
    <string name="app_name">Reunite</string>
    <string name="team_name">Linktotal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_publicaciones">Publicaciones</string>
    <string name="menu_misPublicaciones">Mis Publicaciones</string>
    <string name="menu_nuevaPublicacion">Nueva Publicación</string>
    <string name="menu_mensajes">Mensajes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Herramientas</string>
    <string name="menu_loguin">Iniciar Sesión</string>
    <string name="menu_nuevoUsuario">Registrar Usuario</string>
    <string name="menu_send">Enviar</string>

    <string name="pubImagen">Imagen de publicación</string>
    <string name="pubTitulo">Título de publicación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
