<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_publicaciones" />
        <item
            android:id="@+id/nav_publicacion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_misPublicaciones" />
        <item
            android:id="@+id/nav_nueva_publicacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_nuevaPublicacion" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_mensajes" />
    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_loguin"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_loguin" />
            <item
                android:id="@+id/nav_nuevo_usuario"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_nuevoUsuario" />
        </menu>
    </item>

</menu>
